dnl
dnl  TUN - Universal TUN/TAP device driver.
dnl  Copyright (C) 1999-2000 Maxim Krasnyansky <max_mk@yahoo.com>
dnl
dnl  This program is free software; you can redistribute it and/or modify
dnl  it under the terms of the GNU General Public License as published by
dnl  the Free Software Foundation; either version 2 of the License, or
dnl  (at your option) any later version.
dnl
dnl  This program is distributed in the hope that it will be useful,
dnl  but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
dnl  GNU General Public License for more details.
dnl
dnl  $Id: configure.in,v 1.3 2000/05/04 19:24:53 maxk Exp 
dnl
dnl Process this file with autoconf to produce a configure script.
dnl
dnl Modified by Kazuyoshi <admin2@whiteboard.ne.jp>
dnl Modified for supporting Ethernet tunneling as known as TAP.
dnl $Date: 2007/06/24 15:00:44 $, $Revision: 1.6 $

AC_INIT
AC_PROG_CC
AC_PROG_INSTALL

AC_CHECK_PROG(ISAINFO, isainfo, yes, no, /usr/bin)
if test "$ISAINFO" = "yes" ;
then 
    KARCH=`/usr/bin/isainfo -k`
else
    KARCH='i386'
fi

case $KARCH in
     'sparc' | 'i386')
	M64_OPT=""
	DRV_DIR="/usr/kernel/drv"
	;;
      'sparcv9')
	M64_OPT="-m64"
	DRV_DIR="/usr/kernel/drv/sparcv9"
	;;
      'amd64')
	M64_OPT="-m64 -mcmodel=kernel -mno-red-zone"
	DRV_DIR="/usr/kernel/drv/amd64"
	;;
esac
REL="1.1"
TUN_VER="$REL `date '+%m/%d/%Y'`"; export TUN_VER

AC_ARG_ENABLE(debug,
   --enable-debug        Enable debuging,
   AC_DEFINE(TUN_DEBUG, 1)
)

AC_DEFINE_UNQUOTED(TUN_VER, "$TUN_VER")
AC_SUBST(M64_OPT)
AC_SUBST(DRV_DIR)

AC_OUTPUT(Makefile)

